--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                 <li><a href="blogs.html">Blog Posts</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
                 <li class="social">
-                    <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/dhriti.malik19/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="_blank"><i class="fab fa-google"></i></a>
                     <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
                 </li>
             </ul>
