--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                 <h1 class="main-title">I'm Dhriti, a passionate<br> Business Analyst & Finance Enthusiast.</h1>
                 <div class="social">
                     <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/dhriti.malik19/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
@@ -320,16 +319,15 @@
                     <div class="col-lg-9 col-md-9">
                         <div class="social">
                             <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
-                            <a href="https://www.instagram.com/dhriti.malik19/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
                         </div><br>
                         <a href="https://goo.gl/maps/RCpmKhASPtRb1nhk8" target="blank">
                             <p>Bandra (W), Mumbai 400050</p><br></a>
-                        <a href="tel:+919324002360">
+                        <a href="tel:+14126062706">
                             <p>+91 93240 02360</p>
                         </a>
-                        <a href="mailto: dhritimalik001@gmail.com">
-                            <p>dhritimalik001@gmail.com</p>
+                        <a href="mailto: damalik@tepper.cmu.edu">
+                            <p>damalik@tepper.cmu.edu</p>
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-3">
