--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                 <li><a href="blogs.html">Blog Posts</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
                 <li class="social">
-                    <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="_blank"><i class="fab fa-google"></i></a>
+                    <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
                     <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
                 </li>
             </ul>
         </div>
-        <a href="#0" class="modal-close"></a>
+        <a href="javascript:void(0)" class="modal-close"></a>
     </div>
     <div class="cd-transition-layer visible opening">
         <div class="bg-layer"></div>
