--- a/index.html
+++ b/index.html
@@ -321,10 +321,9 @@
                             <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
                             <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
                         </div><br>
-                        <a href="https://goo.gl/maps/RCpmKhASPtRb1nhk8" target="blank">
-                            <p>Bandra (W), Mumbai 400050</p><br></a>
+                            <p>Pittsburgh, PA</p><br></a>
                         <a href="tel:+14126062706">
-                            <p>+91 93240 02360</p>
+                            <p>+1 412 606 2706</p>
                         </a>
                         <a href="mailto: damalik@tepper.cmu.edu">
                             <p>damalik@tepper.cmu.edu</p>
