--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li><a href="contact.html">Contact Me</a></li>
                 <li class="social">
                     <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
-                    <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/dhritimalik/" target="blank"><i class="fab fa-linkedin"></i></a>
                 </li>
             </ul>
         </div>
@@ -88,7 +88,7 @@
                 <h1 class="main-title">I'm Dhriti, a passionate<br> Business Analyst & Finance Enthusiast.</h1>
                 <div class="social">
                     <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
-                    <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/dhritimalik/" target="blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <a class="down-arrow">
