--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <div class="col-lg-9 col-md-9">
                         <div class="social">
                             <a href="https://drive.google.com/drive/u/0/folders/1cqlVbeIwjakm5lfeHwScTjcwE1o6O_jr" target="blank"><i class="fab fa-google"></i></a>
-                            <a href="https://www.linkedin.com/in/dhritimalik001/" target="blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/dhritimalik/" target="blank"><i class="fab fa-linkedin"></i></a>
                         </div><br>
                             <p>Pittsburgh, PA</p><br></a>
                         <a href="tel:+14126062706">
